--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
-html {
+:root {
     font-size: 62.5%;
+    --color-primary-dark: #00454A;
+    --color-primary-light: #3C6562;
+    --color-secondary: #003545;
+    --color-highlight: #ED6363;
+    --color-highlight-raise: rgb(185, 76, 76);
+    --color-text-light: #ededed;
 }
 
 /* Colour Pallete:
@@ -8,10 +14,10 @@ Red: #ED6363
 Blue: #003545
 Green 1 (Dark): #00454A
 Green 2 (light): #3C6562
-Text: aliceblue */
+Text: var(--color-text-light) */
 
 body {
-    background-color: #3C6562;
+    background-color: var(--color-text-light);
     margin: auto;
 }
 
@@ -25,90 +31,275 @@ body {
     display: flex;
 }
 
-.flex.center {
-    flex: 1;
-    height: 90vh;
+#navbar {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    background-color: var(--color-secondary);
     flex-direction: row;
-    /* background-color: aquamarine; */
-    background: linear-gradient(60deg, #003545, #3C6562);
-    background-size: 100vw 100vh;
-    background-repeat: no-repeat;
+    height: 80px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 5vw 0 10vw;
 }
 
-#navbar {
+#hero {
+    position: relative;
     flex: 1;
-    background-color: #ffffff33;
-    max-height: 5vh;
-    top: 0rem;
-    align-items: center;
+    min-height: 90vh;
+    background-color: var(--color-secondary);
+    background: linear-gradient(60deg, var(--color-primary-dark), var(--color-primary-light));
+    background-size: 100vw 100vh;
+    background-repeat: no-repeat;
+    padding: 0 5vw 0 10vw;
+    overflow: hidden;
+}
+
+.bg-video {
+    position: absolute;
+    left: 0;
+    mix-blend-mode: multiply;
 }
 
 #main-title, #main-image {
-    flex: 0.5;
-    min-height: 90vh;
-    min-width: 45vw;
-    align-items: center;
+    flex: 1;
+    display: flex;
 }
 
 #main-title {
+    flex-direction: column;
+    justify-content: center;
+    z-index: 1;
+}
+
+#main-title button {
+    margin-right: 1.5rem;
+}
+
+#about {
+    flex: 1;
+    flex-direction: row;
+    padding: 80px 5vw 0 10vw;
+    overflow: hidden;
+    min-height: 90vh;
     align-items: center;
-    justify-content: left;
-    padding-left: 10vw;
+}
+
+#about .text.wrapper {
+    flex-direction: column;
+    text-align: left;
+    margin-left: 5vw;
+}
+
+#about-image {
+    align-items: flex-end;
+    justify-content: center;
+    padding-top: 2rem;
+    min-width: 50vh;
+    min-height: 50vh;
+    background: linear-gradient(60deg, var(--color-primary-dark), var(--color-primary-light));
+    border-radius: 50%;
+    overflow: hidden;
+    filter: drop-shadow(0 0 0.5rem rgb(80, 80, 80));
+}
+
+#about-image img {
+    max-height: 50vh;
+}
+
+#portfolio {
+    flex: 1;
+    flex-direction: column;
+    padding: 5vw 10vw 5vw 10vw;
+    overflow: hidden;
+    min-height: 90vh;
+    background-color: var(--color-secondary);
+    align-items: center;
+    text-align: center;
+}
+
+#portfolio .title.wrapper {
+    margin: 2vw 0 0 0;
+    /* background-color: greenyellow; */
+}
+
+#portfolio .text.wrapper {
+    margin-bottom: 2rem;
+}
+
+#portfolio h2 {
+    color: var(--color-text-light);
+    font-size: 5vh;
+}
+
+#portfolio p {
+    color: var(--color-text-light);
+}
+
+#portfolio-cards {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    align-items: center;
+    justify-items: center;
+    gap: 2rem;
     /* background-color: red; */
 }
 
-#main-image {
-    justify-content: center;
+.card {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-secondary);
+    border-radius: 20px;
+    filter: drop-shadow(0 0 0.5rem rgb(30, 30, 30));
+    transition: 0.3s;
+    cursor: pointer;
     overflow: hidden;
-    /* padding-top: 5vh; */
-    /* background-color: greenyellow; */
 }
-   
+
+.card:hover {
+    background-color: var(--color-primary-light);
+    filter: drop-shadow(0 0 1.5rem rgb(30, 30, 30));
+}
+
+.card {
+    position: relative;
+    display: flex;
+    justify-content: end;
+    max-width: 40vh;
+    min-height: 45vh;
+}
+
+.card img {
+    align-self: center;
+    position: absolute;
+    height: 100%;
+    opacity: 30%;
+    z-index: -1;
+}
+
+.card span {
+    font-size: 2.5rem;
+    font-weight: 600;
+    line-height: 4rem;
+}
+
+.card .text.wrapper {
+    padding: 1.5rem;
+}
+
+#contact {
+    flex: 1;
+    flex-direction: row;
+    padding: 0 10vw 0 10vw;
+    min-height: 80vh;
+    background-color: var(--color-text-light);
+    align-items: center;
+    justify-content: center;
+}
+
+#contact h1 {
+    color: var(--color-secondary);
+    animation: none;
+}
+
+#contact .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* background-color: red; */
+}
 
 #footer {
-    flex: 1;
-    max-height: 5vh;
-    background-color: #00454A;
-    bottom: 0;
+    background-color: var(--color-primary-light);
+    flex-direction: row;
+    height: 80px;
+    padding: 0 5vw 0 10vw;
+}
 
+a {
+    text-decoration: none;
+    color: var(--color-text-light);
+    cursor: pointer;
 }
 
 h1 {
     font-family: 'Arvo', serif;
     font-weight: 400;
-    font-size: 3.5vw;
-    color: aliceblue;
+    font-size: 5vh;
+    color: var(--color-text-light);
     animation: 1.5s ease-out 0s 1 fadeSlideInFromTop;
 }
 
-@keyframes fadeSlideInFromTop {
-    0% {
-      transform: translatey(-100%);
-    }
-    100% {
-      transform: translatey(0);
-    }
-    0% {
-        opacity: 0
-    }
-    100% {
-        opacity: 1
-    }
-  }
-
 h1 > span {
     font-weight: 600;
-    color: #ED6363;
-    font-size: 5vw;
+    color: var(--color-highlight);
+    font-size: 9vh;
 }
 
-.logo {
-    margin-left: 2vw;
+h2 {
+    font-family: 'Arvo', serif;
+    font-weight: 400;
+    font-size: 7.5vh;
+    color: var(--color-primary-light);
+}
+
+p {
+    font-family: 'Rubik';
+    color: var(--color-secondary);
+    font-size: 2rem;
+}
+
+button {
+    background-color: transparent;
+    padding: 1.5rem;
+    border: .15rem solid var(--color-text-light);
+    border-radius: .5rem;
+    font-family: 'Rubik' sans-serif;
+    letter-spacing: .1rem;
+    color: var(--color-text-light);
+    font-size: 2rem;
+    transition: 0.2s ease-out;
+}
+
+#portfolioBtn {
+    background-color: transparent;
+    padding: 1.5rem;
+    border: .15rem solid var(--color-secondary);
+    border-radius: .5rem;
+    font-family: 'Rubik' sans-serif;
+    letter-spacing: .1rem;
+    color: var(--color-secondary);
+    font-size: 2rem;
+    transition: 0.2s ease-out;
+    margin: 0 2rem 0 0;
+}
+
+#contactBtn {
+    background-color: var(--color-highlight);
+    border: none;
+}
+
+button:hover {
+    background-color: var(--color-text-light);
+    color: var(--color-secondary);
+    transition: 0.2s ease-in;
+}
+
+#portfolioBtn:hover {
+    background-color: var(--color-secondary);
+    color: var(--color-text-light);
+    transition: 0.2s ease-in;
+}
+
+#contactBtn:hover {
+    background-color: var(--color-highlight-raise);
 }
 
 .logo h3 {
     font-family: 'Arvo', serif;
-    color: aliceblue;
+    color: var(--color-text-light);
     font-weight: 600;
     font-size: 2rem;
     white-space: nowrap;
@@ -131,9 +322,18 @@ h1 > span {
     typing 1s steps(13, end);
 }
 
+h3 > span {
+    font-weight: 400;
+}
+
+#footer p {
+    font-weight: 400;
+    font-size: 2rem;
+}
+
 @keyframes blink-caret {
     from, to { 
-        border-color: #ED6363 
+        border-color: var(--color-highlight) 
     }
     50% { 
         border-color: transparent; 
@@ -149,26 +349,20 @@ h1 > span {
     }
 }
 
-h3 > span {
-    font-weight: 400;
-    font-style: italic;
-}
-
-#footer p {
-    font-family: 'Arvo', serif;
-    color: aliceblue;
-    font-weight: 400;
-    font-size: 1.5rem;
-}
-
-img {
-    /* position: absolute; */
-    bottom: 0;
-    max-height: 90vh;
-    max-width: 45vw;
-    align-self: flex-end;
-    animation: 3s ease-in 0s 1 fadeIn
-}
+@keyframes fadeSlideInFromTop {
+    0% {
+      transform: translatey(-100%);
+    }
+    100% {
+      transform: translatey(0);
+    }
+    0% {
+        opacity: 0
+    }
+    100% {
+        opacity: 1
+    }
+  }
 
 @keyframes fadeIn {
     0% {
@@ -182,69 +376,198 @@ img {
     }   
 }
 
-.links-wrapper {
-    flex: 1;
-    margin-right: 2vw;
+.wrapper {
+    display: flex;
     /* background-color: aqua; */
 }
 
+/* .title.wrapper {
+    background-color: red;
+}
+
+.button.wrapper {
+    background-color: blue;
+
+} */
+
 .links ul {
-    flex: 1;
     text-align: right;
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 .links li {
     display: inline-block;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 2rem;
     text-align: center;
     padding: 12px;
 }
 
 .links a {
+    position: relative;
     text-decoration: none;
-    color: aliceblue;
+    color: var(--color-text-light);
+}
+
+.links a:hover {
+    color: var(--color-text-light);
+}
+
+.links a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--color-text-light);
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+}
+
+.links a:hover::before {
+    transform: scaleX(1);
+}
+
+
+.menu.wrapper, #menuBtn {
+    visibility: hidden;
 }
 
 @media only screen and (max-width: 768px) {
 
-    #main-title, #main-image {
-        min-height:45vh;
-        flex: 0.5;
+    #hero {
+        flex-direction: column;
+        align-items: center;
+        max-height: 80vh;
     }
 
     #main-title {
-        justify-content: center;
-        padding: 0;
+        min-height: 80vh
     }
 
     #main-image {
-        position: relative;
-        overflow: visible;
-    }
-
-    h1, h1 > span {
-        font-size: 5vh;
-        text-align: center;
-        margin: 0;
-    }
-
-    .flex.center {
-        flex-direction: column;
-        margin: 0 !important;
-    }
-
-    img {
-        position: absolute;
-        min-width: 45vh;
-    }
-
-    .links {
         visibility: hidden;
     }
+
+    #about {
+        flex-direction: column;
+        padding: 90px 5vh 5vh;
+    }
+
+    /* #about-image img {
+        padding: 5vh 0;
+        max-height: 50vw;
+    } */
+
+    h1, h1 > span {
+        font-size: 7vh;
+    }
+
+    .button.wrapper {
+       margin-top: 40px;
+    }
+
+    button {
+        background-color: var(--color-text-light);
+        color: var(--color-secondary);
+    }
+
+    .links.wrapper {
+        position: fixed;
+        margin: auto;
+        justify-content: center;
+        left: 0;
+        top: 80px;
+        /* z-index: 100; */
+        height: 0;
+        width: 100vw;
+        background-color: var(--color-secondary);
+        overflow: hidden;
+        transition: 0.4s;
+    }
+
+    .links li {
+        display: block;
+        text-align: center;
+        font-size: 3vh;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    .menu.wrapper {
+        visibility: visible;
+        flex: 1;
+        display: inline-block;
+        max-height: 60px;
+        max-width: 60px;
+        align-items: center;
+        background-color: transparent;
+    }
+
+    #icon {
+        display: block;
+        height: 60px;
+        width: 60px;
+        background-color: transparent;
+        cursor: pointer;
+    }
+
+    #icon div {
+        height: 6px;
+        width: 50px;
+        background-color: white;
+        margin: 0 5px 0 5px;
+        border-radius: 10px;
+        transition: 0.25s ease-in-out;
+    }
+
+    #icon div:nth-child(1) {
+        position: relative;
+        top: 10px;
+        /* background-color: red; */
+    }
+
+    #icon div:nth-child(2) {
+        position: relative;
+        top: 20px;
+        /* background-color: blue; */
+    }
+
+    #icon div:nth-child(3) {
+        position: relative;
+        top: 14px;
+        /* background-color: yellow; */
+    }
+
+    #icon div:nth-child(4) {
+        position: relative;
+        top: 24px;
+        /* background-color: green; */
+    }
+
+    #icon.active div:nth-child(1) {
+        top: 20px;
+        opacity: 0;
+    }
+
+    #icon.active div:nth-child(2) {
+        position: relative;
+        transform: rotate(45deg);
+    }
+
+    #icon.active div:nth-child(3) {
+        position: relative;
+        transform: rotate(-45deg);
+    }
+
+    #icon.active div:nth-child(4) {
+        top: 20px;
+        opacity: 0;
+    }
+
   }
